--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,8 @@ on:
      - master
   schedule:
     - cron: "0 0,6,12,18,21 * * *"
-  watch:
-    types: [started]
+  repository_dispatch:
+  workflow_dispatch:
 
 env:
   # 在这里查看需要添加的secert
@@ -34,20 +34,21 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.event.repository.owner.id == github.event.sender.id  # 自己点的 start
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@main
 
     - name: Set up Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@main
       with:
         python-version: 3.8
+        cache: 'pip'
+        cache-dependency-path: 'hexo_circle_of_friends/requirements.txt'
 
     - name: Install requirements
       working-directory: ./hexo_circle_of_friends
       run: |
-        pip install -r requirements.txt
+        pip install -r hexo_circle_of_friends/requirements.txt
 
     - name: leancloud Update posts # leancloud
       if: ${{ env.STORAGE_TYPE == 'leancloud' }}
