--- a/hexo_circle_of_friends/requirements.txt
+++ b/hexo_circle_of_friends/requirements.txt
@@ -25,7 +25,7 @@ itemadapter==0.4.0
 itemloaders==1.0.4
 jmespath==0.10.0
 leancloud==2.9.7
-lxml==4.9.1
+lxml==4.6.4
 parsel==1.6.0
 priority==1.3.0
 Protego==0.1.16
@@ -42,13 +42,13 @@ qiniu==7.3.1
 queuelib==1.6.2
 feedparser==6.0.8
 requests==2.26.0
-Scrapy==2.6.2
+Scrapy==2.5.1
 secure-cookie==0.2.0
 service-identity==21.1.0
 six==1.16.0
 SQLAlchemy==1.4.31
 starlette==0.14.2
-Twisted==22.4.0
+Twisted==21.7.0
 typing-extensions==4.0.0
 urllib3==1.26.7
 uvicorn==0.14.0
@@ -60,3 +60,8 @@ schedule==1.1.0
 pymongo==4.0.1
 dnspython==2.2.0
 aiohttp==3.8.1
+PyYAML==6.0
+PyNaCl==1.5.0
+python-jose==3.3.0
+passlib==1.7.4
+argon2-cffi==21.3.0
